Remove journey_journey_info_json_request network annotation

Bug: 909867
Change-Id: I8d910acd2b5adf3686678ef186318cc4dc4fe118
Reviewed-on: https://chromium-review.googlesource.com/c/1355772
Reviewed-by: Yusuf Ozuysal <yusufo@chromium.org>
Reviewed-by: Ramin Halavati <rhalavati@chromium.org>
Commit-Queue: Nicolas Ouellet-Payeur <nicolaso@chromium.org>
Cr-Commit-Position: refs/heads/master@{#612653}
Former-commit-id: 706b39eb53476938cb57be1e0c81928c747f0713